--- a/style.css
+++ b/style.css
@@ -79,15 +79,16 @@ table img {
 }
 
 .image {
-    width: 600px;
-    height: 500px;
+    width: calc(100vw/2.5);
+    height: calc(100vh/1.5);
     padding: 10px;
-    margin-left: 10px;
+    margin-left: calc(0.5vw);
     float: left;
 }
 
 .image:hover {
-    width: 650px;
+    width: calc(100vw/2.3);
+    height: calc(100vh/1.1);
     opacity: 0.5;
 }
 
