--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ table img {
 
 .image {
     width: 40vw;
-    height: 60vh;
+    height: 40vw;
     padding: 10px;
     margin-left: calc(0.5vw);
     float: left;
