--- a/style.css
+++ b/style.css
@@ -181,5 +181,44 @@ li {
     color: white;
 }
 
+.slide-container {
+    width: 1200px;
+    height: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: hidden;
+}
 
+.image-container {
+    width: 7200px;
+    height: 600px;
+    margin: 0 0 0 0;
+    position: relative;
+    text-align: center;
+    animation-name: slide-animation;
+    animation-duration: 20s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-play-state: running;
+}
+
+.image-container img {
+    float: left;
+    margin: 0;
+    padding: 0;
+}
+
+@keyframes slide-animation {
+    0% {left: 0;}
+    10% {left: 0;}
+    20% {left: -1200px;}
+    30% {left: -1200px;}
+    40% {left: -2400px;}
+    50% {left: -2400px;}
+    60% {left: -1200px;}
+    70% {left: -1200px;}
+    80% {left: 0;}
+    90% {left: 0;}
+    100% {left: 0;}
+}
 
