--- a/style.css
+++ b/style.css
@@ -195,8 +195,9 @@ li {
     margin: 0 0 0 0;
     position: relative;
     text-align: center;
+    overflow: hidden;
     animation-name: slide-animation;
-    animation-duration: 20s;
+    animation-duration: 30s;
     animation-iteration-count: infinite;
     animation-direction: alternate;
     animation-play-state: running;
@@ -210,15 +211,15 @@ li {
 
 @keyframes slide-animation {
     0% {left: 0;}
-    10% {left: 0;}
-    20% {left: -1200px;}
-    30% {left: -1200px;}
-    40% {left: -2400px;}
-    50% {left: -2400px;}
-    60% {left: -1200px;}
-    70% {left: -1200px;}
-    80% {left: 0;}
-    90% {left: 0;}
+    10% {left: -1200px;}
+    20% {left: -2400px;}
+    30% {left: -3600px;}
+    40% {left: -4800px;}
+    50% {left: -6000px;}
+    60% {left: -4800px;}
+    70% {left: -3600px;}
+    80% {left: -2400px;;}
+    90% {left: -1200px;}
     100% {left: 0;}
 }
 
